# YellowBelt

./: Week2Task1.cpp  main.cpp
Project/: CMakeLists.txt  Dockerfile  ON_FUTURE.txt  README.md
Project/build_debug/: CMakeCache.txt  Makefile  cmake_install.cmake  conanbuildinfo.txt  conanbuildinfo_debug.cmake
Project/src/: automation.cpp  automation.h  dog.cpp  dog.h  http_request_constant.h  http_server.cpp  http_server.h  info_holders.cpp  info_holders.h  json_loader.cpp  json_loader.h  logger.cpp  logger.h  main.cpp  model.cpp  model.h  player.cpp  player.h  request_handler.cpp  request_handler.h  server_logger.cpp  server_logger.h
